--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,20 +3,18 @@
     package="it.glisco.powerbuttonbroken" >
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <!--
-    <uses-permission android:name="android.permission.SHUTDOWN" />
-    -->
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
 
-
+<!--     <uses-permission android:name="android.permission.SHUTDOWN" /> -->
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
-        <service android:name="LogService"/>
-        <service android:enabled="true" android:name="SensorService"/>
-
+        
+        <service
+            android:name=".SensorService"
+            android:enabled="true" />
 
         <activity
             android:name=".MyLockScreenActivity"
@@ -29,7 +27,7 @@
         </activity>
 
         <receiver
-            android:name="MyAdminReceiver"
+            android:name=".MyAdminReceiver"
             android:permission="android.permission.BIND_DEVICE_ADMIN" >
             <meta-data
                 android:name="android.app.device_admin"
@@ -40,7 +38,15 @@
             </intent-filter>
         </receiver>
 
-
+        <receiver
+            android:name=".BootCompletedReceiver"
+            android:enabled="true"
+            android:exported="false" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+                
     </application>
 
 </manifest>
